imported/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-94ad2820-7457-47e9-a79f-341c96ba09c5
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-94ad2820-7457-47e9-a79f-341c96ba09c5
  template:
    metadata:
      labels:
        app: springboot-app-94ad2820-7457-47e9-a79f-341c96ba09c5
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-94ad2820-7457-47e9-a79f-341c96ba09c5-graph:8.0.0
        ports:
        - containerPort: 8081
