imported/kubernates/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service-3ff6687b-fc8c-4c41-97df-cfc03c99d668
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  selector:
    app: springboot-app-3ff6687b-fc8c-4c41-97df-cfc03c99d668
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
